src/tests/ci/assignment_5_functions/valid/07_bool_alias.c
#define bool int
#define true 1

int main() {
    bool x = true;
    return x;
}