src/tests/ci/assignment_5_functions/invalid_semantic/23_void_function_used_as_value.c
void foo() {
    return;
}

int main() {
    int x = foo();
    return x;
}